[project]
name = "pulse"
authors = [
  { name = "anonLASS", email = "a@b.com" },
]
version = "0.2.0"
description = "PULSE - Polling Using LLM-based Sentiment Extraction"
readme = "README.md"
requires-python = ">=3.12"

keywords = ["Large Language Models", "Forecasting", "Virtual Poll"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "huggingface-hub[cli]>=0.34.4",
  "transformers[mistral-common]==4.56.1",
  "vllm==0.10.0",
  "openai>=1.90.0",
  "lm-eval>=0.4.9.1",
  "pandas>=2.3.0",
  "seaborn>=0.13.2",
  "matplotlib>=3.10.3",
  "ipykernel>=6.29.5",
  "st-pages>=1.0.1",
  "streamlit==1.48.0",
  "streamlit-extras>=0.7.5",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.2.0,<5", "ruff>=0.11.7"]

[project.urls]
GitHub = "https://github.com/elidek-themis/pulse"

[project.scripts]
pulse = "pulse.__init__:run"
router = "router.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".vscode"]

[tool.ruff.lint]
select = [
  "I",  # isort
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "E",  # pycodestyle
  "F",  # Pyflakes
  "W",  # pycodestyle warnings
  "B9", # flake8-bugbear
  "UP", # pyupgrade
  "PL", # pylint
  # "G"  # logging
]
ignore = [
  "W191",    # indentation-with-tabs, handled by ruff-format
  "E731",    # lambda-assignment
  "B905",    # zip-without-explicit-strict
  "PLR0913", # too-many-arguments
  "PLC0414", # useless-import-alias
]

[tool.ruff.lint.isort]
from-first = false
length-sort = true
lines-between-types = 1
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
